applications/devtron/overlays/mgmt/argocd.vng.bet.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: devtroncd
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.vng.bet`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
  tls:
    store:
      name: default
      namespace: traefik
